@@ -21,6 +21,10 @@ has param 'path' => (
 
 with qw(Bitcoin::Crypto::Role::WithDerivationPath);
 
+use overload
+	q{""} => sub { shift->as_string },
+	fallback => 1;
+
 signature_for get_derivation_path => (
 	method => Object,
 	positional => [],
@@ -33,26 +37,28 @@ sub get_derivation_path
 	return $self;
 }
 
-signature_for get_hardened => (
+signature_for get_path_hardened => (
 	method => Object,
 	positional => [],
 );
 
-sub get_hardened
+sub get_path_hardened
 {
 	my ($self) = @_;
 
 	my $path = $self->path;
 	return [
 		map {
-			$_ >= Bitcoin::Crypto::Constants::max_child_keys
+			my $hardened = $_ >= Bitcoin::Crypto::Constants::max_child_keys;
+			my $value = $_ - ($hardened * Bitcoin::Crypto::Constants::max_child_keys);
+			[$value, $hardened];
 		} @$path
 	];
 }
 
-signature_for from_string => (
-	method => Str,
-	positional => [Str],
+signature_for get_path_hardened => (
+	method => Object,
+	positional => [],
 );
 
 sub from_string
@@ -87,6 +93,24 @@ sub from_string
 		private => $head eq 'm',
 		path => \@path,
 	);
+}
+
+signature_for as_string => (
+	method => Object,
+	positional => [],
+);
+
+sub as_string
+{
+	my ($self) = @_;
+
+	my $string = $self->private ? 'm' : 'M';
+
+	foreach my $item (@{$self->get_path_hardened}) {
+		$string .= '/' . $item->[0] . ($item->[1] ? q{'} : '');
+	}
+
+	return $string;
 }
 
 1;
@@ -133,16 +157,25 @@ Hardened keys are greater than or equal to C<2^31>
 
 Constructs a new derivation path based on the string.
 
+=head3 as_string
+
+	$m_notation_string = $object->as_string;
+
+Does the reverse of L</from_string>.
+
 =head3 get_derivation_path
 
 	$path = $path->get_derivation_path()
 
 A helper which returns self.
 
-=head3 get_hardened
+=head3 get_path_hardened
 
-	$hardened = $path->get_hardened()
+	$hardened = $path->get_path_hardened()
 
-Returns an array reference with boolean values. Each value can be used to
-determine if L</path> element under the same array index is hardened or not.
+Returns an array reference. Each item in the array is an array reference with
+two values, where the first one is the path key and the second one is a boolean
+indicating whether that key is hardened. The first value will always be within
+the range C<0 .. 2^31 - 1> (unlike L</path>, which has keys larger than that
+for hardened keys).
 
